# ShoulderSimulation

./: .gitignore  README.md
src/shoulder/: CMakeLists.txt  package.xml
src/shoulder/config/urdf/: shoulder.urdf
src/shoulder/include/shoulder/: type_utils.hpp
src/shoulder/include/shoulder/Nodes/: ShoulderCore.hpp
src/shoulder/include/shoulder/YAlgorithm/: YDynamics.hpp  YMotion.hpp
src/shoulder/src/: Shoulder.cpp
src/shoulder/src/Nodes/: ShoulderCore.cpp
src/shoulder/src/YAlgorithm/: YDynamics.cpp  YMotion.cpp
src/shoulder_msgs/: CMakeLists.txt  package.xml
src/shoulder_msgs/msg/: State.msg
